Transitioned to ACM format

--- a/paper/acm/citations.bib
+++ b/paper/acm/citations.bib
@@ -241,4 +241,37 @@
   year   = {2008},
 }
 
+@InProceedings{tavallaee2009detailed,
+  author       = {Tavallaee, Mahbod and Bagheri, Ebrahim and Lu, Wei and Ghorbani, Ali A},
+  title        = {A detailed analysis of the KDD CUP 99 data set},
+  booktitle    = {2009 IEEE symposium on computational intelligence for security and defense applications},
+  year         = {2009},
+  pages        = {1--6},
+  organization = {Ieee},
+}
+
+@InProceedings{lanvin:hal-03775466,
+  author      = {Lanvin, Maxime and Gimenez, Pierre-Fran{\c c}ois and Han, Yufei and Majorczyk, Fr{\'e}d{\'e}ric and M{\'e}, Ludovic and Totel, Eric},
+  title       = {{Errors in the CICIDS2017 dataset and the significant differences in detection performances it makes}},
+  booktitle   = {{CRiSIS 2022 - International Conference on Risks and Security of Internet and Systems}},
+  year        = {2022},
+  pages       = {1-16},
+  address     = {Sousse, Tunisia},
+  month       = Dec,
+  hal_id      = {hal-03775466},
+  hal_version = {v1},
+  keywords    = {intrusion detection ; dataset labelling ; machine learning},
+  pdf         = {https://hal.archives-ouvertes.fr/hal-03775466/file/CRiSIS_2022_Maxime_Lanvin.pdf},
+  url         = {https://hal.archives-ouvertes.fr/hal-03775466},
+}
+
+@InProceedings{engelen2021,
+  author    = {Engelen, Gints and Rimmer, Vera and Joosen, Wouter},
+  title     = {Troubleshooting an Intrusion Detection Dataset: the CICIDS2017 Case Study},
+  booktitle = {2021 IEEE Security and Privacy Workshops (SPW)},
+  year      = {2021},
+  pages     = {7-12},
+  doi       = {10.1109/SPW53761.2021.00009},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
